Don't fire popstate event on initial document load

According to the specification [1], a popstate event should only be fired
when the document has a "last entry" and the entry being navigated to isn't
it.  A document is created without a "last entry" and gets one just after
this check when it is first navigated to, so a popstate should be fired any
time a document is navigated to except for the first time after it has been
created.

[1] http://www.whatwg.org/specs/web-apps/current-work/multipage/history.html#traverse-the-history (step 12-14 in particular)

BUG=63040

Review URL: https://codereview.chromium.org/136463002

git-svn-id: svn://svn.chromium.org/blink/trunk@165221 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 6a65f4e27e40250f397434b6f3e7b5e1e12cec05