third_party/WebKit/Source/core/frame/DOMWindow.cpp
@@ -450,7 +450,8 @@ void DOMWindow::documentWasClosed()
 {
     dispatchWindowLoadEvent();
     enqueuePageshowEvent(PageshowEventNotPersisted);
-    enqueuePopstateEvent(m_pendingStateObject ? m_pendingStateObject.release() : SerializedScriptValue::nullValue());
+    if (m_pendingStateObject)
+        enqueuePopstateEvent(m_pendingStateObject.release());
 }
 
 void DOMWindow::enqueuePageshowEvent(PageshowEventPersistence persisted)
